# shrtnr

./: README.md
client/: .prettierignore  .prettierrc  bun.lockb  index.html  package.json  prettier.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
client/src/components/lib/: shrtnr-input.tsx
client/src/components/shared/: header.tsx
client/src/components/ui/: button.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx
client/src/components/utils/: theme-toggle.tsx
client/src/routes/: __root.tsx  _app.tsx  _layout.tsx  index.tsx
client/src/routes/_app/: home.tsx
client/src/routes/_layout/: yellow.tsx
client/src/routes/posts/: $postId.tsx
client/src/styles/: shrtnr-input.module.scss
server/: .gitignore  README.md  pyproject.toml
